z-index: 9999; /* set a higher z-index value */ https://www.shecodes.io/athena/126168-how-to-fix-a-dropdown-menu-appearing-behind-a-section-on-squarespace

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -445,6 +445,7 @@ ul ul {
 
 li:hover ul {
   display: block;
+  z-index: 9999; /* set a higher z-index value */
 }
 
 
